--- a/app/src/main/res/drawable/background2.xml
+++ b/app/src/main/res/drawable/background2.xml
@@ -1,19 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-
     <gradient
-        android:startColor="#AEEDCF"
+        android:startColor="#2695FB"
+        android:centerColor="#FFFFFF"
         android:endColor="#FFFFFF"
         android:angle="270"
-        android:type="linear"
-        android:gradientRadius="100%"
-        android:centerColor="@color/white"/>
-
-    <corners android:radius="24dp" />
-
-    <stroke
-        android:width="1dp"
-        android:color="#FFFFFF" />
-
+        android:centerY="0.25"
+        android:type="linear" />
 </shape>
