--- a/app/src/main/res/drawable/gradient2.xml
+++ b/app/src/main/res/drawable/gradient2.xml
@@ -2,10 +2,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <gradient
-        android:angle="225"
-        android:startColor="#00FDBD"
-        android:endColor="#0072FF"
-        android:type="linear" />
+    <solid android:color="@color/white" />
+
+    <stroke
+        android:width="3.5dp"
+        android:color="#2695FB" />
+
+    <corners android:radius="8dp" />
 
 </shape>
