now it load data in baches for home fragment. and the banners not load data from banners collection and uses bars and dots just like flipkart,

--- a/app/src/main/res/drawable/background_of_category_item.xml
+++ b/app/src/main/res/drawable/background_of_category_item.xml
@@ -9,7 +9,7 @@
     <corners android:radius="5dp" />
     <stroke
         android:width="2dp"
-        android:color="#00F87D" />
+        android:color="@color/buy_now_green" />
 
 
 </shape>
