--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,8 @@
     <color name="background_gray">#F5F5F5</color>
     <color name="text_dark">#333333</color>
     <color name="text_gray">#888888</color>
+    <color name="transparent">#00000000</color>
+
 
 
 </resources>
