--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -309,14 +309,30 @@
                 android:gravity="center"
                 android:orientation="horizontal" />
 
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:text="Deals of the Day"
-                android:textStyle="bold"
-                android:textSize="18sp" />
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_weight="4"
+                    android:text="Top Picks For You"
+                    android:textStyle="bold"
+                    android:textSize="18sp" />
+                <ImageView
+                    android:id="@+id/Top_picks_see_all_button"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/outline_arrow_right_alt_24"
+                    android:layout_gravity="end"
+                    android:layout_weight="1"
+                    />
+
+            </LinearLayout>
 
             <com.facebook.shimmer.ShimmerFrameLayout
                 android:id="@+id/dealsShimmerLayout"
