--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/category_item_root"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -10,22 +10,25 @@
     android:gravity="center"
     android:elevation="15dp"
     android:padding="1dp"
-    android:background="@android:color/transparent" >
-    <LinearLayout
-        android:layout_width="120dp"
+    android:background="@android:color/transparent">
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="60dp"
         android:layout_height="60dp"
-        android:gravity="center"
-        android:background="@drawable/category_outline">
+        android:layout_gravity="center"
+        app:cardCornerRadius="30dp"
+        app:cardElevation="0dp"
+        app:strokeWidth="1dp"
+        app:strokeColor="#008E0C">
+
         <ImageView
             android:id="@+id/categoryImageView"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:scaleType="centerCrop"
             tools:src="@mipmap/ic_launcher"
-            android:contentDescription="Category Icon"
-            android:background="@android:color/transparent" />
-    </LinearLayout>
+            android:contentDescription="Category Icon" />
+
+    </com.google.android.material.card.MaterialCardView>
     <TextView
     android:id="@+id/categoryNameTextView"
     android:layout_width="match_parent"
