--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,34 +5,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black">
+    android:background="@color/white">
 
     <ImageView
-        android:id="@+id/backgroundImage"
-        android:layout_width="0dp"
+        android:id="@+id/background"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:contentDescription="@string/todo"
         android:scaleType="centerCrop"
-        android:src="@drawable/abcd"
-        android:alpha="0.8"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:src="@drawable/qwq"
+        app:layout_constraintBottom_toTopOf="@id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/guideline" />
-
-    <View
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="#4D000000"
-        app:layout_constraintTop_toTopOf="@id/backgroundImage"
-        app:layout_constraintBottom_toBottomOf="@id/backgroundImage"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <View
         android:id="@+id/bottomContainer"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/black"
+        android:background="#fa2a3c"
         app:layout_constraintTop_toBottomOf="@id/guideline"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,25 +40,26 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnSkip"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Skip Login"
-        android:textColor="@color/white"
-        android:textSize="12sp"
         android:textAllCaps="false"
-        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-        app:strokeColor="@color/white"
-        app:strokeWidth="1dp"
+        android:textColor="@color/black"
+        android:textSize="13sp"
+        android:layout_marginTop="35dp"
+        android:layout_marginEnd="5dp"
+        android:textStyle="bold"
         app:cornerRadius="20dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:strokeColor="@color/black"
+        app:strokeWidth="2dp" />
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/logoContainer"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
         android:layout_gravity="center"
         app:cardCornerRadius="40dp"
         app:cardElevation="0dp"
